# OpenGLPlayground

./: .gitignore  CMakeLists.txt  README.md
cmake/: UtilityFunctions.cmake
resources/scenes/: sphereOnPlane.fbx  sphereOnPlane2.fbx
src/app/: CMakeLists.txt  main.cpp
src/app/00_triangle/: CMakeLists.txt  main.cpp
src/app/00_triangle/shaders/: fragment.fs  vertex.vs
src/app/00_triangle/triangle/: Renderer.cpp
src/app/01_texture/: CMakeLists.txt  main.cpp
src/app/01_texture/shaders/: vertex.vs
src/app/01_texture/texture/: Renderer.cpp  Renderer.hpp
src/app/02_3d_model/: CMakeLists.txt  main.cpp
src/app/02_3d_model/3d_model/: Renderer.cpp  Renderer.hpp
src/app/02_3d_model/resources/: sphere.fbx
src/app/02_3d_model/shaders/: fragment.fs  vertex.vs
src/app/03_ubo/: CMakeLists.txt  main.cpp
src/app/03_ubo/shaders/: fragment.fs  vertex.vs
src/app/03_ubo/ubo/: Renderer.cpp  Renderer.hpp
src/app/04_fbo/: CMakeLists.txt  main.cpp
src/app/04_fbo/fbo/: GRenderer.cpp  GRenderer.hpp  Renderer.cpp  Renderer.hpp  ShadingRenderer.cpp  ShadingRenderer.hpp  Types.cpp  Types.hpp
src/app/04_fbo/shaders/: gbuffer.fs  gbuffer.vs  shading.fs  shading.vs
src/app/05_tessellation/: CMakeLists.txt  main.cpp
src/app/05_tessellation/shaders/: fragment.fs  tesControl.tesc  tesEval.tese  vertex.vs
src/app/05_tessellation/tessellation/: Renderer.cpp  Renderer.hpp
src/app/06_shadows/: CMakeLists.txt  main.cpp
src/app/06_shadows/shaders/: fragment.fs  vertex.vs
src/app/06_shadows/shadows/: Data.cpp  Data.hpp  LightRenderer.hpp  Renderer.cpp  Renderer.hpp  ShadowRenderer.hpp
src/app/texture/: CMakeLists.txt  main.cpp
src/app/texture/shaders/: fragment.fs
src/app/texture/texture/: Renderer.cpp  Renderer.hpp
src/app/triangle/: CMakeLists.txt  main.cpp
src/app/triangle/triangle/: Renderer.cpp  Renderer.hpp
src/engine/: CMakeLists.txt
src/engine/engine/: Camera.cpp  Camera.hpp  CommonTypes.hpp  DataIO.cpp  DataIO.hpp  GLErrorHandling.cpp  GLErrorHandling.hpp  GLObject.hpp  GLProgram.cpp  GLProgram.hpp  GLSampler.cpp  GLSampler.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp  GLTexture2D.cpp  GLTexture2D.hpp  Mesh.cpp  Mesh.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  RenderData.hpp  RenderDataManager.hpp  Scene.hpp  Texture2D.hpp  Viewport.hpp
src/logger/: CMakeLists.txt
